--- a/BlogStore.PresentationLayer/Views/Login/UserLogin.cshtml
+++ b/BlogStore.PresentationLayer/Views/Login/UserLogin.cshtml
@@ -26,7 +26,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center mb-4">
                                     <a href="/" class="d-block mb-2">
-                                        <img src="./assets/images/logos/logo.svg" alt="Logo" style="max-height: 40px;">
+                                        <img src="/flexy-bootstrap-lite-1.0.0/assets/images/logos/logo.svg" alt="Logo" style="max-height: 40px;">
                                     </a>
                                     <h4 class="fw-semibold mb-0">Giriş Yap</h4>
                                 </div>
@@ -57,8 +57,8 @@
         </div>
     </div>
 
-    <script src="./assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="./assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="flexy-bootstrap-lite-1.0.0/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="flexy-bootstrap-lite-1.0.0/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
 </html>
