--- a/BlogStore.PresentationLayer/Views/Shared/Components/_NavbarLayoutComponentPartial/Default.cshtml
+++ b/BlogStore.PresentationLayer/Views/Shared/Components/_NavbarLayoutComponentPartial/Default.cshtml
@@ -14,9 +14,9 @@
 
                         <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
                             <li><a href="/Default/Index">Anasayfa</a></li>
-                            <li><a href="services.html">Yazarlar</a></li>
-                            <li><a href="about.html">Giriş Yap</a></li>
-                            <li><a href="about.html">Bize Yazın</a></li>
+                            <li><a href="/Writter/Index">Yazarlar</a></li>
+                            <li><a href="/CategoryUI/Index">Kategoriler</a></li>
+                            <li><a href="/Login/UserLogin">Giriş Yap</a></li>
                         </ul>
                     </div>
                     <div class="col-2 text-end">
